
- Incremental Search Bar and HyperSearch Bar commands now always
  disregard the selection. Use Incremental Search for Word and
  HyperSearch for Word commands if you want to search for the selected
  text.

- Made behavior of auto indent caused by "Insert Tab and Indent",
  "Insert Enter and Indent", and "Indent Selected Lines" commands is
  more consistent.

}}}
{{{ File System Browser

- The favorites list can contain files now.

- Added a Utilities->Favorites menu.

- The expansion triangles are now flush with the icon. Previously they
  were vertically aligned which was inconsistent with Swing JTrees.

}}}
{{{ Syntax Highlighting

- Updated Inform syntax highlighting (Matt Albrecht).

- Added S+ syntax highlighting (Matt Albrecht).

- Added Io syntax highlighting (Sebastien Pierre).

}}}
{{{ User Interface

- The Global Options dialog box has been rearranged a little. There are
  two new panes, Autosave & Backup, and View. The Loading & Saving pane
  has been removed.

- "Copy" button in Activity Log window now copies entire log if nothing
  is selected.

- Added "Remove All Nodes" button to HyperSearch Results window
  (Carmine Lucarelli).

- Removed "Go to Text Area" (C+e C+e) action. "Scroll to Current Line"
  (C+e C+j) now sends focus to the text area, and also expands the
  current fold if the caret is not visible.

}}}
{{{ Plugin Loader

- The plugin manager now loads plugins immediately after they are
  installed if they are using the jEdit 4.2 plugin API, and unloads
  plugins when removing and updating. Note that a restart is still
  required after updating from a jEdit 4.1 version of a plugin to the
  4.2 plugin, but future updates do not require a restart.

- Added an option to Global Options->Plugin Manager to leave the
  downloaded ZIP archives in ~/.jedit/PluginManager.download.

- If a plugin failed to load, its actions, dockables, etc are no longer
  visible from the UI.

}}}
{{{ Scripting Changes
