@@ -41,6 +41,19 @@
 	</CODE>
 </ACTION>
 
+<ACTION NAME="vfs.browser.copy-path">
+	<CODE>
+		buf = new StringBuffer();
+		for(int i = 0; i &lt; files.length; i++)
+		{
+			if(i != 0)
+				buf.append('\n');
+			buf.append(files[i].path);
+		}
+		Registers.setRegister('$',buf.toString());
+	</CODE>
+</ACTION>
+
 <ACTION NAME="vfs.browser.delete">
 	<CODE>
 		browser.delete(files);
